--- a/src/styles/components/_main-header-sub-menu.scss
+++ b/src/styles/components/_main-header-sub-menu.scss
@@ -106,3 +106,26 @@
     width: 100%;
     background-color: white;
 }
+// .a-main-subheader{
+//     margin: auto;
+// }
+// .a-main-subheader-container{
+//     height: 100%;
+//         }
+
+// .header-menu-carousel-text:hover{
+
+//     .hero{
+//         border-bottom: 3px #1dbf73 solid;
+//         height: 100%;
+        
+//     }
+// }
+// .hero:hover{
+//     .hello{
+//     border-bottom: 3px #1dbf73 solid;
+//     }
+// }
+// .hero{
+//     margin: top 12px;;
+// }
