--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -29,6 +29,7 @@
 @import 'components/office-dashboard';
 @import 'components/gig-edit';
 @import 'components/gig-preview-carousel';
+@import 'components/office-orders';
 
 
 // VIEWS
