--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -1,3 +1,52 @@
+.gig-details-header {
+    height: 53px;
+    display: flex;
+    border-top: lightgrey solid 1px;
+    border-bottom: lightgrey solid 1px;
+    // margin-top: 120px;
+    justify-content: flex-start;
+    max-width: 1304px;
+    width: 100%;
+    z-index: 10;
+    background-color: white;
+
+    .gig-details-header-nav {
+        list-style-type: none;
+        text-decoration:none;
+        width: 100%;
+
+        .gig-details-header-ul {
+            list-style-type: none;
+            text-decoration:none;
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+            margin:0 ;
+
+            .gig-details-header-item {
+                list-style-type: none;
+                text-decoration:none;
+                margin-right:12px ;
+                margin-left: 12px;
+
+                color: #95979d;
+                .gig-details-header-item-a{
+                    list-style-type: none;
+                    text-decoration:none;
+                    font-size: 14px;
+                    line-height: 53px;
+                    font-weight: 600;
+                    display: inline-block;
+                    color: #95979d;
+                }
+
+            }
+        }
+    }
+}
+
+
+
 .gig-page {
     max-width: 1304px;
     margin: 0 auto;
@@ -5,9 +54,14 @@
     display: flex;
     align-items: flex-start;
     padding: 32px 32px 0;
+
     .gig-details {
+
+
+
         width: 57.42%;
         margin-right: 9.15%;
+
         h2 {
             font-size: 20px;
             line-height: 28px;
@@ -16,8 +70,10 @@
             color: #404145;
             font-weight: 700;
         }
+
         .gig-overview {
             margin-bottom: 24px;
+
             h1 {
                 padding-bottom: 16px;
                 word-wrap: break-word;
@@ -26,8 +82,10 @@
                 color: #404145;
                 margin: 0;
             }
+
             .seller-overview {
                 display: flex;
+
                 img {
                     height: 30px;
                     width: 30px;
@@ -35,34 +93,42 @@
                     object-fit: cover;
                     margin-right: 16px;
                 }
+
                 .mini-info {
                     display: flex;
                     flex-wrap: wrap;
                     align-items: center;
                     font-size: 14px;
                     line-height: 21px;
+
                     .seller-name {
                         color: #404145;
                         font-weight: 700;
                     }
+
                     .seller-level {
                         color: #62646a;
                     }
+
                     .rating-stars {
                         fill: #ffb33e;
+
                         &:before {
                             content: "|";
                             color: #c5c6c9;
                             margin-right: 8px;
                         }
+
                         span {
                             padding-left: 4px;
                             color: #62646a;
                         }
+
                         b {
                             color: #ffb33e;
                             padding-left: 4px;
                         }
+
                         svg {
                             margin-left: 4px;
                             width: 15px;
@@ -70,6 +136,7 @@
                             top: 1px;
                         }
                     }
+
                     div {
                         margin-right: 8px;
                         margin-bottom: 8px;
@@ -78,6 +145,7 @@
             }
         }
     }
+
     .sidebar {
         width: 33.6%;
         position: sticky;
