--- a/src/styles/components/_office-orders.scss
+++ b/src/styles/components/_office-orders.scss
@@ -1,5 +1,4 @@
 .dashboard {
-    margin-top: 81px;
     width: 100%;
     min-height: calc(100vh - 80px);
     background-color: rgb(247, 247, 247);
@@ -90,6 +89,7 @@
                         }
                         .category-title {
                             margin-right: auto;
+                            flex: 1;
                         }
                         .category-name {
                             width: 20%;
@@ -98,7 +98,10 @@
                             width: 10%;
                         }
                         .category-actions {
-                            width:20%
+                            width: 10%;
+                        }
+                        .category-status {
+                            width: 10%;
                         }
                     }
                     li {
@@ -122,6 +125,9 @@
                         }
                         .gig-title {
                             margin-right: auto;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                            flex: 1;
                         }
                         .buyer-name {
                             width: 20%;
@@ -129,9 +135,16 @@
                         .price {
                             width: 10%;
                         }
-                        .actions {
-                            width: 20%;
-                            text-align: center;
+                        .actions-orders {
+                            width: 10%;
+                            cursor: pointer;
+                            &:hover{
+                                text-decoration: underline;
+                            }
+                        }
+                        .status{
+                            width: 10%;
+                            text-transform: capitalize;
                         }
                     }
                 }
