--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -17,9 +17,15 @@
     }
     .modal{
         background-color: white;
-        height: 300px;
-        width: 300px;
+        height: 120px;
+        width: 500px;
         z-index: 1;
+        font-size: 22pt;
+        padding: 20px;
+        color: darkgreen;
+        text-align: center;
+        border: 1px solid black;
+        border-radius: 15px;
     }
     
 }
