--- a/src/styles/components/_office-dashboard.scss
+++ b/src/styles/components/_office-dashboard.scss
@@ -144,6 +144,7 @@
                         }
                         .status-dashboard{
                             width: 10%;
+                            text-transform: capitalize;
                         }
                     }
                 }
