--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,7 +1,7 @@
 .full-header {
     background-color: rgba(255, 255, 255, 0);
     width: 100%;
-    color: #62646a;
+    color: white;
     position: sticky;
     top: 0px;
     z-index: 3000;
@@ -44,7 +44,7 @@
                     border-right: 0;
                     border-radius: 3px 0 0 3px;
                     color: #404145;
-                    // height: 48px;
+                    // height: 48px;f
                     box-sizing: border-box;
                     font-size: 15px;
                     line-height: 17px;
@@ -82,7 +82,7 @@
         a {
             height: auto;
             display: block;
-            color: #62646a;
+            color: #404145;
             text-align: center;
             text-decoration: none;
             .not-exist {
