--- a/src/styles/components/_main-carousel.scss
+++ b/src/styles/components/_main-carousel.scss
@@ -93,7 +93,7 @@
   grid-row-start: 1;
   grid-row-end: 1;
   color:white;
-  padding:16px;
+  padding:24px;
   margin-bottom: auto;
   text-align:left;
   font-weight: 700;
@@ -107,4 +107,5 @@
   font-family: macanBold;
   padding: 0 0 26px 0;
   margin: 0;
+  margin-top:96px;
 }
