--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -2,14 +2,14 @@
     // background-color: #013f1d;
     display: flex;
     color: whitesmoke;
-    height: 630px;
+    height: 680px;
     // margin-top:-80px;
     // padding-left: 40px;
     .gig-home-top {
         max-width: 1400px;
         width: 100%;
         margin: auto auto;
-        // padding: 0 32px;
+        // padding: 0 32px;v
         .left-side {
             width: 650px;
             form {
