--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -1,8 +1,7 @@
 .full-header {
-    background-color: rgba(255, 255, 255, 0);
+    background-color: rgb(255, 255, 255);
     width: 100%;
-    color: white;
-    position: sticky;
+    position: relative;
     top: 0px;
     z-index: 3000;
     transition: background-color 0.5s ease;
@@ -137,7 +136,7 @@
                     border: 0;
                     cursor: pointer;
                 }
-                .user-pic{
+                .user-pic {
                     height: 32px;
                     width: 32px;
                     border-radius: 50%;
@@ -151,4 +150,12 @@
             }
         }
     }
+}
+.home-mode {
+    background-color: rgba(255, 255, 255, 0);
+    position: fixed;
+    color: white;
+}
+.scroll-mode {
+    background-color: rgb(255, 255, 255);
 }
