--- a/src/styles/components/_gig-preview.scss
+++ b/src/styles/components/_gig-preview.scss
@@ -1,5 +1,5 @@
 .preview {    
-    width: 325px;
+    width: 323px;
     height: 400px;
     border: 1px solid #e4e5e7;
     &:hover {
@@ -93,7 +93,7 @@
     .gig-card-img {
         height: 195px;
         object-fit: cover;
-        width: calc(100% - 1px);
+        width: calc(100% );
         cursor: pointer;
         .agile{
             top: -38px;
