--- a/src/styles/components/_main-header-sub-menu.scss
+++ b/src/styles/components/_main-header-sub-menu.scss
@@ -8,7 +8,7 @@
     transition: background-color .5s ease;
 
     .app-header {
-        height: 40px;
+        height: 39px;
         max-width: 1400px;
         width:100%;
         margin: 0 auto;
@@ -107,13 +107,12 @@
     background-color: white;
 }
 .a-main-subheader{
-    margin: auto;
+    // margin: auto;
 }
 .a-main-subheader-container{
     height: 100%;
 
     section{
-
         display: flex;
         justify-content: center;
         align-items: center;
