--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -155,7 +155,35 @@
     background-color: rgba(255, 255, 255, 0);
     position: fixed;
     color: white;
+    .app-header{
+        div{
+            a{
+                color: white;
+            }
+        }
+        ul{
+            li{
+                a,button{
+                    color: white;
+                }
+            }
+        }
+    }
 }
 .scroll-mode {
     background-color: rgb(255, 255, 255);
+    .app-header{
+        div{
+            a{
+                color: #74767e;
+            }
+        }
+        ul{
+            li{
+                a,button{
+                    color: #74767e;
+                }
+            }
+        }
+    }
 }
