--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -70,6 +70,7 @@
                     font-weight: 600;
                     display: inline-block;
                     color: #95979d;
+                    cursor: pointer;
                 }
 
             }
@@ -190,5 +191,5 @@
     height: 500px;
     text-align: center;
     background-color: #c5c6c9;
-    margin-bottom: 64px;
+    margin-bottom: 125px;
 }
