--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -135,6 +135,7 @@
                     font-family: macan;
                     border: 0;
                     cursor: pointer;
+                    position: relative;
                 }
                 .user-pic {
                     height: 32px;
@@ -187,3 +188,28 @@
         }
     }
 }
+.header-item{
+    a{
+        position: relative;
+    }
+}
+.notification-dot{
+    height: 8px;
+    width: 8px;
+    border-radius: 50%;
+    background-color: #ff62ad;
+    position: absolute;
+    align-self: flex-start;
+    right: -14px;
+}
+.notification-dot-icon{
+    height: 13px;
+    width: 13px;
+    border-radius: 50%;
+    background-color: #ff62ad;
+    position: absolute;
+    align-self: flex-start;
+    border: white solid 2px;
+    right: -4px;
+}
+
