--- a/src/styles/components/_office-dashboard.scss
+++ b/src/styles/components/_office-dashboard.scss
@@ -57,6 +57,9 @@
                 z-index: 1;
                 display: flex;
                 justify-content: space-between;
+                h3{
+                    text-transform: capitalize;
+                }
                 // align-items: center;
                 select {
                     font-size: 16px;
