--- a/src/styles/components/_office-orders.scss
+++ b/src/styles/components/_office-orders.scss
@@ -1,4 +1,4 @@
-.dashboard {
+.dashboard-orders {
     width: 100%;
     min-height: calc(100vh - 80px);
     background-color: rgb(247, 247, 247);
@@ -58,6 +58,9 @@
                 display: flex;
                 justify-content: space-between;
                 // align-items: center;
+                h3{
+                    text-transform: capitalize;
+                }
                 select {
                     font-size: 16px;
                     line-height: 24px;
