add smart filter

--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -239,3 +239,10 @@
     }
 }
 
+
+.start-business-btn{
+    width: 20%;
+    margin: auto auto;
+    height: 40px;
+    background-color: #1dbf73;
+}
