--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -11,6 +11,7 @@
 // COMPONENTS
 @import 'components/app-header';
 @import 'components/app-footer';
+@import 'components/app-smart-popup-filter';
 @import 'components/app-explore';
 @import 'components/gig-preview';
 @import 'components/gig-list';
