--- a/src/styles/components/_app-explore.scss
+++ b/src/styles/components/_app-explore.scss
@@ -2,6 +2,7 @@
     max-width: 1400px;
     margin: 40px auto;
     padding: 0;
+    display: flex;
     .search-input {
         width: 90%;
         padding: 12px 20px;
@@ -38,4 +39,35 @@
     }
 
     
+}
+
+
+.explore-filter-label{
+    font-weight: 600;
+    color: #222325;
+    min-width: 50px;
+    padding: 6px 12px;
+    border-radius: 4px;
+    border: 1px solid #dadbdd;
+    display: block;
+    font-size: 16px;
+    height: 100%;
+    margin-right: 13px;
+}
+
+.reset-btn {
+    background-color: #1dbf73;
+    width: 8.5%;
+    font-weight: 700;
+    font-size: 16px;
+    height: 48px;
+    color: white;
+    padding: 12px 24px;
+    cursor: pointer;
+    transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+    border-radius: 4px;
+    border: 1px solid transparent;
+    &:hover {
+        background-color: #19a463;
+    }
 }
