--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -241,8 +241,21 @@
 
 
 .start-business-btn{
-    width: 20%;
-    margin: auto auto;
-    height: 40px;
-    background-color: #1dbf73;
+  
+        background-color: #1dbf73;
+        font-weight: 700;
+        font-size: 16px;
+        width: fit-content;
+        height: 48px;
+        color: white;
+        padding: 12px 24px;
+        margin-left: 18px;
+        cursor: pointer;
+        transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+        border-radius: 4px;
+        border: 1px solid transparent;
+        &:hover {
+            background-color: #19a463;
+        }
+    
 }
