--- a/src/styles/components/_app-explore.scss
+++ b/src/styles/components/_app-explore.scss
@@ -3,6 +3,7 @@
     margin: 40px auto;
     padding: 0;
     display: flex;
+    justify-content: space-between;
     .search-input {
         width: 90%;
         padding: 12px 20px;
@@ -57,7 +58,6 @@
 
 .reset-btn {
     background-color: #1dbf73;
-    width: 8.5%;
     font-weight: 700;
     font-size: 16px;
     height: 48px;
