--- a/src/styles/components/_gig-home.scss
+++ b/src/styles/components/_gig-home.scss
@@ -49,7 +49,7 @@
                 padding-left: 44px;
                 box-sizing: border-box;
                 font-size: 16px;
-                &:focus{
+                &:focus {
                     outline: none;
                 }
             }
@@ -79,7 +79,7 @@
                 background-color: white;
                 cursor: auto;
             }
-            .popular{
+            .popular {
                 display: flex;
                 font-size: 14px;
                 line-height: 27px;
@@ -87,8 +87,8 @@
                 color: #fff;
                 padding-top: 24px;
                 font: 400 16px/24px;
-                
-                ul{
+
+                ul {
                     display: flex;
                     width: 100%;
                     margin-left: 12px;
@@ -102,31 +102,31 @@
                     font-size: 14px;
                     line-height: 27px;
                     font-weight: 600;
-                    color: #fff;                    
+                    color: #fff;
                     font: 400 16px/24px;
-                    
-                    li{
-                        display: flex;                                            
+
+                    li {
+                        display: flex;
                         white-space: nowrap;
                         margin: 0;
                         outline: 0;
                         padding: 0;
-                        margin-right: 12px;  
+                        margin-right: 12px;
                         text-align: -webkit-match-parent;
                         font-size: 14px;
                         list-style: none;
                         list-style-image: none;
                         line-height: 27px;
                         font-weight: 600;
-                        color: #fff; 
-                        &:hover{
-                            a{
+                        color: #fff;
+                        &:hover {
+                            a {
                                 background-color: #fff;
                                 color: #404145;
                             }
                         }
-                        
-                        a{
+
+                        a {
                             background-color: transparent;
                             line-height: 24px;
                             font-weight: 600;
@@ -134,7 +134,7 @@
                             padding: 1px 12px 0;
                             border: 1px solid #fff;
                             border-radius: 40px;
-                            transition: all .2s ease-in-out;
+                            transition: all 0.2s ease-in-out;
                             z-index: 4;
                             text-decoration: none;
                             font-size: 14px;
@@ -142,9 +142,7 @@
                             white-space: nowrap;
                         }
                     }
-                    
                 }
-
             }
         }
     }
@@ -165,7 +163,7 @@
     margin: 40px auto;
     // padding: 0 32px;
     padding: 0;
-    h2{
+    h2 {
         padding-left: 18px;
         padding-right: 18px;
     }
@@ -173,7 +171,7 @@
 
 .main-home-2 {
     max-width: 1400px;
-    width:100%;
+    width: 100%;
     margin: auto auto;
     min-height: 705px;
     display: flex;
@@ -215,11 +213,11 @@
             // margin-block-end: 2.33em;
             margin-inline-start: 0px;
             margin-inline-end: 0px;
-            svg{
+            svg {
                 fill: rgb(122, 125, 133);
                 float: left;
                 height: 24px;
-                width:  24px;
+                width: 24px;
             }
         }
         p {
@@ -238,24 +236,24 @@
         }
     }
 }
+.start-business{
+    // justify-self: end;
+}
+.start-business-btn {
+    background-color: #1dbf73;
+    font-weight: 700;
+    font-size: 16px;
+    width: fit-content;
+    height: 48px;
+    color: white;
+    padding: 12px 24px;
+    margin-left: 18px;
+    cursor: pointer;
+    transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
+    border-radius: 4px;
 
-
-.start-business-btn{
-  
-        background-color: #1dbf73;
-        font-weight: 700;
-        font-size: 16px;
-        width: fit-content;
-        height: 48px;
-        color: white;
-        padding: 12px 24px;
-        margin-left: 18px;
-        cursor: pointer;
-        transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
-        border-radius: 4px;
-        border: 1px solid transparent;
-        &:hover {
-            background-color: #19a463;
-        }
-    
+    border: 1px solid transparent;
+    &:hover {
+        background-color: #19a463;
+    }
 }
