--- a/src/styles/components/_app-smart-popup-filter.scss
+++ b/src/styles/components/_app-smart-popup-filter.scss
@@ -1,6 +1,7 @@
 .smart-popup-filter {
     padding: 100px 0;
-    background-color: rgb(247, 247, 247);;
+    background-color: rgb(247, 247, 247);
+    // background-color: white;
     min-height: calc(100vh - 120px);
     .img {
         width: auto;
