--- a/src/styles/components/_gig-details.scss
+++ b/src/styles/components/_gig-details.scss
@@ -82,7 +82,7 @@
 .gig-page {
     max-width: 1304px;
     margin: 0 auto;
-    margin-top: 80px;
+    // margin-top: 80px;
     display: flex;
     align-items: flex-start;
     padding: 32px 32px 0;
