--- a/src/styles/components/_app-explore.scss
+++ b/src/styles/components/_app-explore.scss
@@ -1,6 +1,6 @@
 .search-aria{
     max-width: 1400px;
-    margin: 40px auto;
+    margin: 15px auto;
     padding: 0;
     display: flex;
     justify-content: space-between;
@@ -57,17 +57,17 @@
 }
 
 .reset-btn {
-    background-color: #1dbf73;
+    background-color: white;
     font-weight: 700;
     font-size: 16px;
     height: 48px;
-    color: white;
+    color: #404145;
     padding: 12px 24px;
     cursor: pointer;
     transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
     border-radius: 4px;
-    border: 1px solid transparent;
+    border: 1px solid rgb(118, 118, 118);
     &:hover {
-        background-color: #19a463;
+        background-color: rgb(118, 118, 118);
     }
 }
