--- a/src/styles/components/_app-header.scss
+++ b/src/styles/components/_app-header.scss
@@ -141,6 +141,7 @@
                     height: 32px;
                     width: 32px;
                     border-radius: 50%;
+                    object-fit: cover;
                 }
                 &:hover {
                     a,
