--- a/src/styles/components/_app-explore.scss
+++ b/src/styles/components/_app-explore.scss
@@ -66,7 +66,7 @@
     cursor: pointer;
     transition: 70ms cubic-bezier(0.75, 0, 0.25, 1);
     border-radius: 4px;
-    border: 1px solid rgb(118, 118, 118);
+    border: 1px solid #dadbdd;
     &:hover {
         background-color: rgb(118, 118, 118);
     }
