--- a/src/styles/components/_office-orders.scss
+++ b/src/styles/components/_office-orders.scss
@@ -27,6 +27,7 @@
                         font-size: 18px;
                         color: #62646a;
                         font-weight: 700;
+                        text-transform: capitalize;
                     }
                 }
             }
@@ -95,7 +96,7 @@
                             flex: 1;
                         }
                         .category-name {
-                            width: 20%;
+                            width: 15%;
                         }
                         .category-price {
                             width: 10%;
@@ -105,6 +106,9 @@
                         }
                         .category-status {
                             width: 10%;
+                        }
+                        .category-date {
+                            width: 15%;
                         }
                     }
                     li {
@@ -133,7 +137,12 @@
                             flex: 1;
                         }
                         .buyer-name {
-                            width: 20%;
+                            width: 15%;
+                            text-overflow: ellipsis;
+                            overflow: hidden;
+                        }
+                        .delivery-date {
+                            width: 15%;
                         }
                         .price {
                             width: 10%;
