--- a/src/styles/components/_app-explore.scss
+++ b/src/styles/components/_app-explore.scss
@@ -41,8 +41,17 @@
 
     
 }
-
-
+.select-wrapper{
+    position: relative;
+    .less-than{
+        height: 10px;
+        width: 10px;
+        position: absolute;
+        right: 25px;
+        top: 20px;
+        transform: rotateZ(270deg)
+    }
+}
 .explore-filter-label{
     font-weight: 600;
     color: #222325;
@@ -53,7 +62,10 @@
     display: block;
     font-size: 16px;
     height: 100%;
+    padding-right: 28px;
     margin-right: 13px;
+    width: fit-content;
+    appearance: none;
 }
 
 .reset-btn {
@@ -69,5 +81,6 @@
     border: 1px solid #dadbdd;
     &:hover {
         background-color: rgb(118, 118, 118);
+        color: white;
     }
 }
