--- a/src/styles/components/_office-orders.scss
+++ b/src/styles/components/_office-orders.scss
@@ -21,6 +21,7 @@
                         width: 60px;
                         border-radius: 50%;
                         margin-right: 20px;
+                        object-fit: cover;
                     }
                     div {
                         line-height: 140%;
